create ActivityPartTokens.cs for Activity Token.  work in progress for Chain

--- a/src/Modules/Laser.Orchard.Events/Laser.Orchard.Events.csproj
+++ b/src/Modules/Laser.Orchard.Events/Laser.Orchard.Events.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -165,6 +166,7 @@
     <Compile Include="Services\EventsService.cs" />
     <Compile Include="Services\IEventsService.cs" />
     <Compile Include="Settings\ActivityPartSettingsHooks.cs" />
+    <Compile Include="Tokens\ActivityPartTokens.cs" />
     <Compile Include="Tokens\EventTokens.cs" />
     <Compile Include="ViewModels\ActivityViewModel.cs" />
     <Compile Include="ViewModels\AggregatedEventViewModel.cs" />
