--- a/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Filters\PolicyApiFilterAttribute.cs" />
     <Compile Include="Filters\PolicyFilter.cs" />
     <Compile Include="Handlers\FavoriteCulturePartHandler.cs" />
+    <Compile Include="Handlers\PolicyTextInfoEventHandler.cs" />
     <Compile Include="Handlers\UserRegistrationPolicyPartHandler.cs" />
     <Compile Include="Handlers\UserRegistrationSettingsPartHandler.cs" />
     <Compile Include="Migrations.cs" />
