--- a/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Drivers\UserRegistrationPolicyPartDriver.cs" />
     <Compile Include="Drivers\UserRegistrationSettingsPartDriver.cs" />
     <Compile Include="Enumerators.cs" />
+    <Compile Include="Feature\UsersExtensionsFeature.cs" />
     <Compile Include="Filters\PolicyApiFilterAttribute.cs" />
     <Compile Include="Filters\PolicyFilter.cs" />
     <Compile Include="Handlers\FavoriteCulturePartHandler.cs" />
