--- a/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
+++ b/src/Modules/Laser.Orchard.Mobile/Laser.Orchard.Mobile.csproj
@@ -280,7 +280,7 @@
     <Compile Include="Services\UserPwdRecoveryDefaultFrontEndSettingsProvider.cs" />
     <Compile Include="SMSGatewayMigration.cs" />
     <Compile Include="SmsMigrations.cs" />
-    <Compile Include="Projections\DeviceFilter.cs" />
+    <Compile Include="Projections\DeveiceFilter.cs" />
     <Compile Include="Handlers\SmsSettingsPartHandler.cs" />
     <Compile Include="Handlers\UserDeviceHandler.cs" />
     <Compile Include="Models\UserDeviceRecord.cs" />
