Aggiunte delle rotte per tutti i controller nel back end che venivano richiamati utilizzando la rotta "Laser.Orchard..."

--- a/src/Modules/Laser.Orchard.Reporting/Laser.Orchard.Reporting.csproj
+++ b/src/Modules/Laser.Orchard.Reporting/Laser.Orchard.Reporting.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Models\GenericItem.cs" />
     <Compile Include="Models\ReportRecord.cs" />
     <Compile Include="Models\DataReportViewerPartRecord.cs" />
+    <Compile Include="Routes.cs" />
     <Compile Include="Security\Permissions.cs" />
     <Compile Include="Providers\AggregationResult.cs" />
     <Compile Include="Providers\DescribeGroupByContext.cs" />
