--- a/src/Modules/Laser.Orchard.ContentExtension/Laser.Orchard.ContentExtension.csproj
+++ b/src/Modules/Laser.Orchard.ContentExtension/Laser.Orchard.ContentExtension.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -133,6 +134,7 @@
     <Compile Include="Navigation\DynamicProjectionProvider.cs" />
     <Compile Include="Navigation\AdminMenu.cs" />
     <Compile Include="Permissions\DynamicProjectionPermission.cs" />
+    <Compile Include="Routes.cs" />
     <Compile Include="Services\IContentTypePermissionSettingsService.cs" />
     <Compile Include="Services\IContentExtensionService.cs" />
     <Compile Include="ViewModels\DynamicProjectionVM.cs" />
