--- a/src/Modules/Laser.Orchard.TaskScheduler/Laser.Orchard.TaskScheduler.csproj
+++ b/src/Modules/Laser.Orchard.TaskScheduler/Laser.Orchard.TaskScheduler.csproj
@@ -149,6 +149,11 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Placement.info">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
