--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -137,6 +137,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Views\EditorTemplates\Parts\OwnedFolder_Edit.cshtml" />
     <Content Include="Scripts\contentPickerCreation\ContentPickerCreation.js" />
     <Content Include="Scripts\contentPickerCreation\ContentPickerThemeHiding.js" />
     <Content Include="Scripts\spectrum.js" />
@@ -370,6 +371,10 @@
     <Compile Include="Drivers\JsonDataTableFieldDriver.cs" />
     <Compile Include="Drivers\JsonDataTablePartDriver.cs" />
     <Compile Include="FrontendExtensions\Shapes\ImageShapes.cs" />
+    <Compile Include="MediaExtensions\UserFolder\Drivers\OwnedFolderPartDriver.cs" />
+    <Compile Include="MediaExtensions\UserFolder\Migrations.cs" />
+    <Compile Include="MediaExtensions\UserFolder\Models\OwnedFolderPart.cs" />
+    <Compile Include="MediaExtensions\UserFolder\Providers\OwnedFolder.cs" />
     <Compile Include="Security\WidgetsFrontEndAuthorizationEventHandler.cs" />
     <Compile Include="Settings\JsonDataTableFieldSettingsHooks.cs" />
     <Compile Include="Handlers\JsonDataTablePartHandler.cs" />
@@ -418,7 +423,7 @@
     <Compile Include="FileDownloader\ViewModels\FilesListVM.cs" />
     <Compile Include="Handlers\ContentEventHandler.cs" />
     <Compile Include="Handlers\ContentPickerConnectorHandler.cs" />
-    <Compile Include="Controllers\MediaTransformController.cs" />
+    <Compile Include="MediaExtensions\Transform\Controllers\MediaTransformController.cs" />
     <Compile Include="Drivers\ContentPickerConnectorDriver.cs" />
     <Compile Include="Enumerators.cs" />
     <Compile Include="Extensions\MediaHelperExtensions.cs" />
@@ -435,7 +440,7 @@
     <Compile Include="Localization\DateLocalization.cs" />
     <Compile Include="Localization\IDateLocalization.cs" />
     <Compile Include="Localization\UriCultureSelector.cs" />
-    <Compile Include="MediaExtensionsRoutes.cs" />
+    <Compile Include="MediaExtensions\Transform\MediaExtensionsRoutes.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Migrations\RelationshipsEnhancerMigrations.cs" />
     <Compile Include="Models\ContentPickerConnector.cs" />
