tinymce enhancement wip

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -138,6 +138,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\laser-tinymce.js" />
+    <Content Include="TinyMceEnhancement\plugins\prova\plugin.min.js" />
+    <Content Include="TinyMceEnhancement\plugins\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Views\EditorTemplates\Parts\OwnedFolder_Edit.cshtml" />
     <Content Include="Scripts\contentPickerCreation\ContentPickerCreation.js" />
     <Content Include="Scripts\contentPickerCreation\ContentPickerThemeHiding.js" />
@@ -468,6 +472,8 @@
     <Compile Include="TaxonomiesExtensions\Projections\SelectTermsForm.cs" />
     <Compile Include="TaxonomiesExtensions\Security\AuthorizationEventHandler.cs" />
     <Compile Include="TaxonomiesExtensions\Services\TaxonomyServiceExtension.cs" />
+    <Compile Include="TinyMceEnhancement\Constants.cs" />
+    <Compile Include="TinyMceEnhancement\TinyMcePluginsRoutes.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceShapeDisplayEvent.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceSiteSettingsDriver.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceSiteSettingsHandler.cs" />
