tinymce enhancement: added hint with default value for init script, refactoring

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -470,7 +470,7 @@
     <Compile Include="TaxonomiesExtensions\Security\AuthorizationEventHandler.cs" />
     <Compile Include="TaxonomiesExtensions\Services\TaxonomyServiceExtension.cs" />
     <Compile Include="TinyMceEnhancement\Constants.cs" />
-    <Compile Include="TinyMceEnhancement\TinyMcePluginsRoutes.cs" />
+    <Compile Include="TinyMceEnhancement\TinyMceEnhancementService.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceShapeDisplayEvent.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceSiteSettingsDriver.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceSiteSettingsHandler.cs" />
