--- a/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
+++ b/src/Modules/Laser.Orchard.UsersExtensions/Laser.Orchard.UsersExtensions.csproj
@@ -169,8 +169,6 @@
   <ItemGroup>
     <Compile Include="Controllers\AKUserActionsController.cs" />
     <Compile Include="Controllers\BaseUserActionsController.cs" />
-    <Compile Include="Controllers\ManifestAppFileAdminController.cs" />
-    <Compile Include="Controllers\ManifestAppFileController.cs" />
     <Compile Include="Controllers\PoliciesController.cs" />
     <Compile Include="Controllers\UserActionsAPIController.cs" />
     <Compile Include="Controllers\UserActionsController.cs" />
@@ -185,18 +183,14 @@
     <Compile Include="Handlers\UserRegistrationPolicyPartHandler.cs" />
     <Compile Include="Handlers\UserRegistrationSettingsPartHandler.cs" />
     <Compile Include="Migrations.cs" />
-    <Compile Include="Models\ManifestAppFileRecord.cs" />
     <Compile Include="Models\UserRegistrationLogin.cs" />
     <Compile Include="Models\UserRegistrationPolicyPart.cs" />
     <Compile Include="Models\UserRegistrationSettingsPart.cs" />
-    <Compile Include="Navigation\ManifestAppFileNavigation.cs" />
     <Compile Include="RoutesApi.cs" />
     <Compile Include="Routes\Routes.cs" />
     <Compile Include="Services\DefaultFrontEndSettingsProvider.cs" />
     <Compile Include="Services\IUserActionMethods.cs" />
     <Compile Include="Services\IUsersExtensionsServices.cs" />
-    <Compile Include="Services\ManifestAppFileServices.cs" />
-    <Compile Include="ViewModels\ManifestAppFileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\UserRegistrationPolicy_Edit.cshtml" />
@@ -215,9 +209,8 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Views\ManifestAppFileAdmin\Index.cshtml" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
