--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -470,6 +470,7 @@
     <Compile Include="TaxonomiesExtensions\Security\AuthorizationEventHandler.cs" />
     <Compile Include="TaxonomiesExtensions\Services\TaxonomyServiceExtension.cs" />
     <Compile Include="TinyMceEnhancement\Constants.cs" />
+    <Compile Include="TinyMceEnhancement\ResourceManifest.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceEnhancementService.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceShapeDisplayEvent.cs" />
     <Compile Include="TinyMceEnhancement\TinyMceSiteSettingsDriver.cs" />
