by caching the CurrentContentItem for each id, I can avoid having to fetch it a lot of times

--- a/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
+++ b/src/Modules/Laser.Orchard.StartupConfig/Laser.Orchard.StartupConfig.csproj
@@ -373,6 +373,7 @@
     <Compile Include="Drivers\JsonDataTableFieldDriver.cs" />
     <Compile Include="Drivers\JsonDataTablePartDriver.cs" />
     <Compile Include="FrontendExtensions\Shapes\ImageShapes.cs" />
+    <Compile Include="Handlers\CurrentContentCacheEvictionHandler.cs" />
     <Compile Include="MediaExtensions\UserFolder\Drivers\OwnedFolderPartDriver.cs" />
     <Compile Include="MediaExtensions\UserFolder\Migrations.cs" />
     <Compile Include="MediaExtensions\UserFolder\Models\OwnedFolderPart.cs" />
