--- a/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
+++ b/src/Modules/Laser.Orchard.Cookies/Laser.Orchard.Cookies.csproj
@@ -123,7 +123,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Drivers\HubSpotSettingsPartDriver.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Handlers\HubSpotSettingPartHandler.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Drivers\CookieLawPartDriver.cs" />
     <Compile Include="Drivers\CookieSettingsPartDriver.cs" />
@@ -131,6 +133,7 @@
     <Compile Include="Handlers\CookieSettingsPartHandler.cs" />
     <Compile Include="Models\CookieLawPart.cs" />
     <Compile Include="Models\CookieSettingsPart.cs" />
+    <Compile Include="Models\HubSpotSettingsPart.cs" />
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Services\GDPRScript.cs" />
     <Compile Include="Services\HubSpotCookieGDPR.cs" />
@@ -151,6 +154,7 @@
     <None Include="bundleconfig.json" />
     <Content Include="packages.config" />
     <Content Include="Contents\Web.config" />
+    <Content Include="Views\EditorTemplates\Parts.HubSpot.Settings.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Orchard\src\Orchard.Web\Core\Orchard.Core.csproj">
