--- a/src/Modules/Laser.Orchard.OpenAuthentication/packages.config
+++ b/src/Modules/Laser.Orchard.OpenAuthentication/packages.config
@@ -7,10 +7,14 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net452" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net452" />
+  <package id="jose-jwt" version="2.5.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
 </packages>
