--- a/src/Themes/Laser.ECommerce/Laser.ECommerce.csproj
+++ b/src/Themes/Laser.ECommerce/Laser.ECommerce.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -345,6 +346,9 @@
     <Content Include="Views\Payment\Info.cshtml" />
     <Content Include="Views\Braintree\Index.cshtml" />
     <Content Include="packages.config" />
+    <Content Include="bundleconfig.json.bindings">
+      <DependentUpon>bundleconfig.json</DependentUpon>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
